Fixed issue where words would be cut off completely in feedback

--- a/f1_info_frontend/src/app/development/feedback/feedback-item/feedback-item.component.scss
+++ b/f1_info_frontend/src/app/development/feedback/feedback-item/feedback-item.component.scss
@@ -12,7 +12,7 @@
   h3 {
     font-size: 1.1rem;
     font-weight: 500;
-    word-break: break-all;
+    word-break: break-word;
   }
 
   &__delete {
